# ChangeLog for media-fonts/aquafont
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/aquafont/ChangeLog,v 1.12 2004/10/06 14:06:42 usata Exp $

  06 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> aquafont-2.7-r2.ebuild,
  -aquafont-2.7.ebuild:
  Added to ~ppc-macos.

  29 Aug 2004; Tom Gall <tgall@gentoo.org> aquafont-2.7-r2.ebuild:
  stable on ppc64, bug #61742

  06 Aug 2004; Gustavo Zacarias <gustavoz@gentoo.org> aquafont-2.7-r2.ebuild:
  Stable on sparc

  04 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> aquafont-2.7-r2.ebuild,
  aquafont-2.7.ebuild:
  Better descriptions; bug #58841

*aquafont-2.7-r2 (26 Jun 2004)

  26 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> -aquafont-2.7-r1.ebuild,
  +aquafont-2.7-r2.ebuild:
  Added FONT_SUFFIX, closing bug #55176

*aquafont-2.7-r1 (21 Jun 2004)

  21 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +aquafont-2.7-r1.ebuild:
  font.eclassify

  03 Feb 2004; <augustus@gentoo.org> aquafont-2.7.ebuild:
  Added ~amd64 keyword.

*aquafont-2.7 (28 Jul 2003)

  11 Oct 2003; Mamoru KOMACHI <usata@gentoo.org> aquafont-2.7.ebuild:
  Fixed typp in pkg_postrm

  15 Aug 2003; Mamoru KOMACHI <usata@gentoo.org> aquafont-2.7.ebuild:
  Marked stable on all arch

  31 Jul 2003; Mamoru KOMACHI <usata@gentoo.org> aquafont-2.7.ebuild:
  Added ~alpha, ~sparc and ~ppc to KEYWORDS, virtual/x11 to (R)DEPEND.

  28 Jul 2003; Mamoru KOMACHI <usata@gentoo.org> aquafont-2.7.ebuild:
  Initial import. Original ebuild submitted by Atzm WATANABE
  <sitosito@p.chan.ne.jp> at GentooJP BugTrack.  Redistribution 
  courtesy of the author, Aqua <aquablue@m12.milkcafe.to>
  See /usr/portage/licenses/aquafont before using the software.
