@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/aquafont/aquafont-2.7-r2.ebuild,v 1.7 2004/10/06 14:06:42 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/aquafont/aquafont-2.7-r2.ebuild,v 1.8 2005/01/20 02:56:18 usata Exp $
 
 inherit font
 
@@ -11,7 +11,7 @@ DESCRIPTION="Handwritten Japanese fixed-width TrueType font"
 HOMEPAGE="http://aquablue.milkcafe.to/"
 SRC_URI="http://aquablue.milkcafe.to/fnt/${MY_P}.lzh"
 
-KEYWORDS="x86 alpha sparc ppc ~amd64 ppc64 ~ppc-macos"
+KEYWORDS="x86 alpha sparc ppc ~amd64 ppc64 ppc-macos"
 LICENSE="aquafont"
 SLOT=0
 
@@ -20,6 +20,7 @@ FONT_S="${S}"
 FONT_SUFFIX="ttf"
 
 DEPEND="app-arch/lha"
+RDEPEND=""
 
 DOCS="readme.txt"
 
