@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/aquafont
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/aquafont/ChangeLog,v 1.12 2004/10/06 14:06:42 usata Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/aquafont/ChangeLog,v 1.13 2005/01/20 02:56:18 usata Exp $
+
+  20 Jan 2005; Mamoru KOMACHI <usata@gentoo.org> aquafont-2.7-r2.ebuild:
+  Removed lha from RDEPEND; bug #78746. Stable on ppc-macos.
 
   06 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> aquafont-2.7-r2.ebuild,
   -aquafont-2.7.ebuild:
